CRUD and Set userDetails